--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+o<!DOCTYPE html>
 
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
+  <title>Hallo Welt!</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
